tests/baselines/reference/typeMatch2.errors.txt
tests/cases/compiler/typeMatch2.ts(3,2): error TS2739: Type '{}' is missing the following properties from type '{ x: number; y: number; }': x, y
tests/cases/compiler/typeMatch2.ts(4,5): error TS2741: Property 'y' is missing in type '{ x: number; }' but required in type '{ x: number; y: number; }'.
tests/cases/compiler/typeMatch2.ts(5,20): error TS2322: Type '{ x: number; y: number; z: number; }' is not assignable to type '{ x: number; y: number; }'.
  Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
tests/cases/compiler/typeMatch2.ts(6,17): error TS2322: Type '{ x: number; z: number; }' is not assignable to type '{ x: number; y: number; }'.
  Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
tests/cases/compiler/typeMatch2.ts(18,5): error TS2322: Type 'Animal[]' is not assignable to type 'Giraffe[]'.
  Property 'g' is missing in type 'Animal' but required in type 'Giraffe'.
tests/cases/compiler/typeMatch2.ts(22,5): error TS2322: Type '{ f1: number; f2: Animal[]; }' is not assignable to type '{ f1: number; f2: Giraffe[]; }'.
  Types of property 'f2' are incompatible.
    Type 'Animal[]' is not assignable to type 'Giraffe[]'.
tests/cases/compiler/typeMatch2.ts(34,26): error TS2322: Type '{ x: number; y: any; z: number; }' is not assignable to type '{ x: number; y: number; }'.
  Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
tests/cases/compiler/typeMatch2.ts(35,5): error TS2741: Property 'y' is missing in type '{ x: number; }' but required in type '{ x: number; y: number; }'.


==== tests/cases/compiler/typeMatch2.ts (8 errors) ====
    function f1() {
    	var a = { x: 1, y: 2 };
    	a = {}; // error
    	~
!!! error TS2739: Type '{}' is missing the following properties from type '{ x: number; y: number; }': x, y
        a = { x: 1 }; // error
        ~
!!! error TS2741: Property 'y' is missing in type '{ x: number; }' but required in type '{ x: number; y: number; }'.
!!! related TS2728 tests/cases/compiler/typeMatch2.ts:2:18: 'y' is declared here.
    	a = { x: 1, y: 2, z: 3 };
    	                  ~~~~
!!! error TS2322: Type '{ {|x|0|}: number; {|y|1|}: number; {|z|2|}: number; }' is not assignable to type '{ {|x|3|}: number; {|y|4|}: number; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
!!! annotated symbol 0 tests/cases/compiler/typeMatch2.ts:5:8
!!! annotated symbol 1 tests/cases/compiler/typeMatch2.ts:5:14
!!! annotated symbol 2 tests/cases/compiler/typeMatch2.ts:5:20
!!! annotated symbol 3 tests/cases/compiler/typeMatch2.ts:2:12
!!! annotated symbol 4 tests/cases/compiler/typeMatch2.ts:2:18
        a = { x: 1, z: 3 };  // error
                    ~~~~
!!! error TS2322: Type '{ {|x|0|}: number; {|z|1|}: number; }' is not assignable to type '{ {|x|2|}: number; {|y|3|}: number; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
!!! annotated symbol 0 tests/cases/compiler/typeMatch2.ts:6:11
!!! annotated symbol 1 tests/cases/compiler/typeMatch2.ts:6:17
!!! annotated symbol 2 tests/cases/compiler/typeMatch2.ts:2:12
!!! annotated symbol 3 tests/cases/compiler/typeMatch2.ts:2:18
    }
    
    class Animal { private a; }
    class Giraffe extends Animal { private g; }
    
    function f2() {
        var a = new Animal();
        var g = new Giraffe();
        var aa = [ a, a, a ];
        var gg = [ g, g, g ];
        aa = gg;
        gg = aa; // error
        ~~
!!! error TS2322: Type '{|Animal|0|}[]' is not assignable to type '{|Giraffe|1|}[]'.
!!! error TS2322:   Property 'g' is missing in type 'Animal' but required in type 'Giraffe'.
!!! related TS2728 tests/cases/compiler/typeMatch2.ts:10:40: 'g' is declared here.
!!! annotated symbol 0 tests/cases/compiler/typeMatch2.ts:9:7
!!! annotated symbol 1 tests/cases/compiler/typeMatch2.ts:10:7
        var xa = { f1: 5, f2: aa };
        var xb = { f1: 5, f2: gg };
        xa = xb; // Should be ok
        xb = xa; // Not ok
        ~~
!!! error TS2322: Type '{ {|f1|0|}: number; {|f2|1|}: {|Animal|2|}[]; }' is not assignable to type '{ {|f1|3|}: number; {|f2|4|}: {|Giraffe|5|}[]; }'.
!!! error TS2322:   Types of property 'f2' are incompatible.
!!! error TS2322:     Type '{|Animal|6|}[]' is not assignable to type '{|Giraffe|7|}[]'.
!!! annotated symbol 0 tests/cases/compiler/typeMatch2.ts:19:16
!!! annotated symbol 1 tests/cases/compiler/typeMatch2.ts:19:23
!!! annotated symbol 2 tests/cases/compiler/typeMatch2.ts:9:7
!!! annotated symbol 3 tests/cases/compiler/typeMatch2.ts:20:16
!!! annotated symbol 4 tests/cases/compiler/typeMatch2.ts:20:23
!!! annotated symbol 5 tests/cases/compiler/typeMatch2.ts:10:7
!!! annotated symbol 6 tests/cases/compiler/typeMatch2.ts:9:7
!!! annotated symbol 7 tests/cases/compiler/typeMatch2.ts:10:7
    }
    
    function f4() {
        var _any: any = 0;
        var i = 5;
        i = null; 
        i = undefined;
        var a = { x: 1, y: 1 };
        a = { x: 1, y: null }; 
        a = { x: 1, y: undefined }; 
        a = { x: 1, y: _any }; 
        a = { x: 1, y: _any, z:1 }; 
                             ~~~
!!! error TS2322: Type '{ {|x|0|}: number; {|y|1|}: any; {|z|2|}: number; }' is not assignable to type '{ {|x|3|}: number; {|y|4|}: number; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
!!! annotated symbol 0 tests/cases/compiler/typeMatch2.ts:34:11
!!! annotated symbol 1 tests/cases/compiler/typeMatch2.ts:34:17
!!! annotated symbol 2 tests/cases/compiler/typeMatch2.ts:34:26
!!! annotated symbol 3 tests/cases/compiler/typeMatch2.ts:30:15
!!! annotated symbol 4 tests/cases/compiler/typeMatch2.ts:30:21
        a = { x: 1 }; // error
        ~
!!! error TS2741: Property 'y' is missing in type '{ x: number; }' but required in type '{ x: number; y: number; }'.
!!! related TS2728 tests/cases/compiler/typeMatch2.ts:30:21: 'y' is declared here.
        var mf = function m(n) { return false; };
        var zf = function z(n: number) { return true; };
        mf=zf;
        mf(_any);
        zf(_any);
    }
    
    
    